--- a/first.ipynb
+++ b/first.ipynb
@@ -57,6 +57,24 @@
    "id": "129750f7",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "be2aba50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕안녕펭귄\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"안녕안녕펭귄\")"
+   ]
   }
  ],
  "metadata": {
