--- a/first.ipynb
+++ b/first.ipynb
@@ -37,6 +37,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "14389aae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 이제 점심이야\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello 이제 점심이야\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "de8fb2b7",
    "metadata": {},
